[gd_scene load_steps=6 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://Player_Sprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://NotePlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://ComoTracker.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.51491
height = 1.35141

[node name="player" type="KinematicBody2D"]
collision_mask = 12
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.289649, 22.8916 )
shape = SubResource( 1 )

[node name="NotePlayer" parent="." instance=ExtResource( 3 )]
volume_db = -5.0

[node name="ComboTracker" parent="." instance=ExtResource( 4 )]

[node name="Player_Sprite" parent="." instance=ExtResource( 2 )]
position = Vector2( 2.32135, 12.3805 )
