[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/instance/avatars/bunny_avatar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/instance/SpeechBubble.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/instance/health_bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/practical_buffer_health_bar.gd" type="Script" id=5]
[ext_resource path="res://scenes/instance/midi_input.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.562, 7.50866 )

[node name="player" type="KinematicBody2D"]
collision_mask = 60
script = ExtResource( 1 )

[node name="avatar" parent="." instance=ExtResource( 2 )]
position = Vector2( 1.42365, 5.03067 )
scale = Vector2( 0.2, 0.2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.628159, -2.11263 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1.42365, 5.03067 )
current = true
zoom = Vector2( 1.5, 1.5 )
limit_smoothed = true
smoothing_enabled = true

[node name="NotePlayer" parent="." instance=ExtResource( 6 )]
position = Vector2( 1.42365, 5.03067 )

[node name="SpeechBubble" parent="." instance=ExtResource( 3 )]
position = Vector2( 64.9197, -81.8796 )
z_index = 4

[node name="health_bar" parent="." instance=ExtResource( 4 )]
position = Vector2( -37.8535, -119.604 )
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="health_bar"]
[connection signal="timeout" from="health_bar/Timer" to="health_bar" method="_on_Timer_timeout"]
